--- a/app/Rmd/intro_EN.Rmd
+++ b/app/Rmd/intro_EN.Rmd
@@ -32,12 +32,12 @@ minYear <- 2010
 lapply(list.files(here::here("app/R"), pattern = ".[Rr]$", full.names = TRUE), source) # check helpers.R for a list of packages
 copy_rdata_files() # make sure data files are up to date. 
 #load(here::here("app/data/testData.RData"))
-load(here::here("app/data/OpenData.RData"))
+#load(here::here("app/data/OpenData.RData"))
+load(here::here("app/data/CommonData.RData"))
 #load(here::here("app/data/OpenData_sardist.RData"))
 #load(here::here("app/data/SecureData.RData"))
 
-listed_species <- listed_species[!c(listed_species$`COSEWIC status` == "No Status" & listed_species$`SARA status` == "No Status"), ]
-row.names(listed_species) <- NULL
+
 #load("\\\\ent.dfo-mpo.ca\\ATLShares\\Science\\BIODataSvc\\SRC\\Reproducible_Reporting\\data\\SecureData.Rdata")
 
 ```
