--- a/app/Rmd/report_habitat_EN.Rmd
+++ b/app/Rmd/report_habitat_EN.Rmd
@@ -9,12 +9,13 @@ This section describes habitat information derived from a variety of data source
 
 ### **Intertidal Vegetation and Rockweed**
 
-Satellite-based Maps of Intertidal Vegetation and Rockweed presence polygons  
-Contact: <Gordana.Lazin@dfo-mpo.gc.ca>  
-Last retrieved on: February 17 2021  
-Quality Tier: Medium  
-Security level: none\
-Data use constraints: none
+Satellite-based Maps of Intertidal Vegetation and Rockweed presence polygons 
+
+```{r rockweed-meta, results='asis'}
+filesLoaded <- load_rdata(c("rockweed_rr"), "MAR", env = environment())
+
+write_meta(rockweed_rr, "EN")
+```
 
 Rockweed (_Ascophyllum nodosum_) is a common, cold-water, intertidal, brown algae with long-lived holdfasts attached to rocky substrates. It dominates the rocky intertidal zone of Atlantic Canada and provides habitat for fish, invertebrates, and birds. There is little information available on spatial distribution of rockweed and intertidal vegetation in the Maritimes Region. The existing industry survey data are deemed proprietary and are not available. Consequently, regional scale satellite-derived maps were developed to indicate location, relative density of the intertidal vegetation, and polygons delineating areas likely occupied by rockweed [@Lazin2021].
 
@@ -30,20 +31,8 @@ Data notes:
 #### ***Area-specific Intertidal Vegetation and Rockweed search results***  
 
 ```{r overlap-rockweed, echo=FALSE, results='asis'}
-# define polygon dataset and attribute to plot
-poly_sf <- rockweed_sf
-attribute <- "status"
-
-# set status column
-poly_sf$status = ""
-poly_sf$status[which(poly_sf$RWP==1)] = "Present"
-poly_sf$status[which(poly_sf$RWP==2)] = "Likely Present"
-poly_sf$status[which(poly_sf$RWP==5)] = "Unknown"
-poly_sf$status[which(poly_sf$RWP==0)] = "Not Present"
-
-
 # intersect polyData with 3 polygons (region, map area, and study box)
-clippedRW <- master_intersect(poly_sf, mapDataList)
+clippedRW <- master_intersect(rockweed_rr$data_sf, mapDataList)
 ```
 *
 ```{r overlap-rockweed-output, echo=FALSE, results='asis'}
@@ -59,7 +48,7 @@ writeLines(polyText)
 
 ```{r rockweed-plot, fig.height=8, fig.width=11, fig.cap='Quality Tier: Medium. Security level: none. Map showing the search area defined by the user: location of the proposed project/activity is highlighted in yellow (input polygon), surrounded by an exposure zone or user-defined buffer area in blue. Figure shows overlap between the search area and satellite-based maps of intertidal vegetation and rockweed presence polygons.'}
 if(!is.null(clippedRW$studyData)){
-  plot_rr_sf(areaMap, clippedRW$mapData, attribute, outlines = FALSE, legendName="Rockweed")
+  plot_rr_sf(areaMap, clippedRW$mapData, rockweed_rr$attribute, outlines = FALSE, legendName="Rockweed")
 }
 ```
 
