--- a/app/Rmd/intro_EN.Rmd
+++ b/app/Rmd/intro_EN.Rmd
@@ -31,9 +31,9 @@ minYear <- 2010
 
 lapply(list.files(here::here("app/R"), pattern = ".[Rr]$", full.names = TRUE), source) # check helpers.R for a list of packages
 copy_rdata_files() # make sure data files are up to date. 
+filesLoaded <- load_rdata(c("CommonData"), "MAR", env = environment())
 #load(here::here("app/data/testData.RData"))
 #load(here::here("app/data/OpenData.RData"))
-load(here::here("app/data/CommonData.RData"))
 #load(here::here("app/data/OpenData_sardist.RData"))
 #load(here::here("app/data/SecureData.RData"))
 
@@ -48,12 +48,11 @@ studyArea <- sf::st_read("{{path_to_geoms}}")
 # studyArea <- st_read(here::here("app/studyAreaTest/geoms_slc_test.geojson")) #Offshore
 # studyArea <- st_read(here::here("app/studyAreaTest/geoms_slc_coastal_test.geojson")) #coastal
 # studyArea <- st_read(here::here("app/studyAreaTest/geoms_slc_no_land.geojson")) #no land
-region <- st_read(here::here("app/studyAreaTest/geoms_slc_MarBioRegion.geojson"))
 site <- sf::st_centroid(studyArea)
 ```
 
 ```{r parameters-for-area_map.r, echo=FALSE, include=FALSE, cache=FALSE}
-mapDataList <- maps_setup(studyArea, site, region, land50k_sf, land10m_sf, bounds_sf)
+mapDataList <- maps_setup(studyArea, site, region_sf, land50k_sf, land10m_sf, bounds_sf)
 list2env(mapDataList, envir = environment())
 ```
 
