--- a/app/Rmd/report_planning_EN.Rmd
+++ b/app/Rmd/report_planning_EN.Rmd
@@ -1,5 +1,5 @@
 ``` {r load-planning-data, echo=FALSE}
-filesLoaded <- load_rdata(c("EBSA_rr", "conservationSites_rr"), "MAR", env = environment())
+filesLoaded <- load_rdata(c("ebsa_rr", "conservationSites_rr"), "MAR", env = environment())
 
 ```
 
@@ -10,16 +10,16 @@ This section describes information relevant to spatial planning from a variety o
 
 <!-- ### **Ecologically and Biologically Significant Areas (EBSA)** -->
 
-### **`r EBSA_rr$title$en` **
+### **`r ebsa_rr$title$en` **
 
 ```{r EBSA-meta, results='asis'}
-write_meta(EBSA_rr, "EN")
+write_meta(ebsa_rr, "EN")
 ```
 EBSA Story Map: <https://gisp.dfo-mpo.gc.ca/portal/apps/MapJournal/index.html?appid=b91f85de60f44a7b90633e4b43e3916a>
 
 Dataset description from the Open Data record (DFO 2016a):
 ```{r EBSA-text, results='asis'}
-writeLines(noquote(EBSA_rr$text$en))
+writeLines(noquote(ebsa_rr$text$en))
 
 ```
 
@@ -27,7 +27,7 @@ writeLines(noquote(EBSA_rr$text$en))
 
 ```{r EBSA-results, echo=FALSE, results='asis'}
 #function for overlap
-EBSAoutput <- master_intersect(EBSA_rr$data_sf, mapDataList, getRegion=TRUE)
+EBSAoutput <- master_intersect(ebsa_rr$data_sf, mapDataList, getRegion=TRUE)
 
 #function for overlap
 Query_output_EBSA <- if(is.null(EBSAoutput$studyData)){
@@ -49,13 +49,13 @@ if (!is.null(EBSATable)){
 
 ```{r EBSA-region-plot, fig.height=8, fig.width=11, fig.cap= 'Quality Tier: High. Security level: none. Map showing Ecologically and Biologically Significant Areas (EBSA) relative to the search area defined by the user (red outline).'}
 if (!is.null(EBSAoutput$regionData)){
-  plot_rr_sf(regionMap, EBSAoutput$regionData, EBSA_rr$attribute)
+  plot_rr_sf(regionMap, EBSAoutput$regionData, ebsa_rr$attribute)
 }
 ```
 
 ```{r EBSA-area-plot, fig.height=8, fig.width=11, fig.cap= 'Quality Tier: High. Security level: none. Map showing Ecologically and Biologically Significant Areas (EBSA) in the search area defined by the user (red outline).'}
 if(!is.null(EBSAoutput$studyData)){
-  plot_rr_sf(areaMap, EBSAoutput$mapData, EBSA_rr$attribute)
+  plot_rr_sf(areaMap, EBSAoutput$mapData, ebsa_rr$attribute)
 }
 ```
 
