--- a/app/Rmd/report_planning_FR.Rmd
+++ b/app/Rmd/report_planning_FR.Rmd
@@ -1,5 +1,5 @@
 ``` {r load-planning-data, echo=FALSE}
-filesLoaded <- load_rdata(c("EBSA_rr", "conservationSites_rr"), "MAR", env = environment())
+filesLoaded <- load_rdata(c("ebsa_rr", "conservationSites_rr"), "MAR", env = environment())
 
 ```
 
@@ -8,16 +8,16 @@ filesLoaded <- load_rdata(c("EBSA_rr", "conservationSites_rr"), "MAR", env = env
 
 <!-- **Zones d’importance écologique et biologique (ZIEB)**  -->
 
-### **`r EBSA_rr$title$fr` **
+### **`r ebsa_rr$title$fr` **
 
 ```{r EBSA-meta, results='asis'}
-write_meta(EBSA_rr, "FR")
+write_meta(ebsa_rr, "FR")
 ```
 Histoir ZIEB: <https://gisp.dfo-mpo.gc.ca/portal/apps/MapJournal/index.html?appid=b91f85de60f44a7b90633e4b43e3916a>
 
 Description de l’ensemble de données (tirée du dossier des données ouvertes):
 ```{r EBSA-text, results='asis'}
-writeLines(noquote(EBSA_rr$text$fr))
+writeLines(noquote(ebsa_rr$text$fr))
 
 ```
 
@@ -26,7 +26,7 @@ writeLines(noquote(EBSA_rr$text$fr))
 *
 ```{r EBSA-results, echo=FALSE, results='asis'}
 #function for overlap
-EBSAoutput <- master_intersect(EBSA_rr$data_sf, mapDataList, getRegion=TRUE)
+EBSAoutput <- master_intersect(ebsa_rr$data_sf, mapDataList, getRegion=TRUE)
 ```
 
 ```{r EBSA-check, echo=FALSE, results='asis'}
@@ -52,13 +52,13 @@ if (!is.null(EBSATable)){
 
 ```{r EBSA-region-plot, fig.height=8, fig.width=11, fig.cap= 'Niveau de qualité : Élevée. Niveau de sécurité : Aucun. Carte montrant les zones d’importance écologique et biologique (ZIEB) par rapport à la zone de recherche définie par l’utilisateur (entourée de rouge).'}
 if (!is.null(EBSAoutput$regionData)){
-  plot_rr_sf(regionMap, EBSAoutput$regionData, EBSA_rr$attribute)
+  plot_rr_sf(regionMap, EBSAoutput$regionData, ebsa_rr$attribute)
 }
 ```
 
 ```{r EBSA-area-plot, fig.height=8, fig.width=11, fig.cap= 'Niveau de qualité : Élevée. Niveau de sécurité : Aucun. Carte montrant les zones d’importance écologique et biologique (ZIEB) dans la zone de recherche définie par l’utilisateur (entourée de rouge).'}
 if(!is.null(EBSAoutput$studyData)){
-  plot_rr_sf(areaMap, EBSAoutput$mapData, EBSA_rr$attribute)
+  plot_rr_sf(areaMap, EBSAoutput$mapData, ebsa_rr$attribute)
 }
 ```
 
