--- a/app/Rmd/report_cetaceans_EN.Rmd
+++ b/app/Rmd/report_cetaceans_EN.Rmd
@@ -260,7 +260,13 @@ plot_cetaceans_4grid(finWhale_rr$data_sf, harbourPorpoise_rr$data_sf, humpbackWh
 write_meta(blueWhaleHab_rr, "EN")
 ```
 
-Dataset description from the Open Data record [@OpenData_blue_imphabitat]: The distribution of Blue Whales (*Balaenoptera musculus*) is mainly dictated by key environmental drivers such as food requirements and availability, sea ice, and sometimes predation risks. It is common to find Blue Whales in upwelling regions, depending on topography (banks, slopes and shallow water) and thermal fronts, which are actually related to krill aggregations. Blue Whales feed almost exclusively on euphausiids (krill) and have the highest absolute metabolic demands. A shapefile on the distribution of significant perennial areas of krill aggregation is available (DFO-ECCC). Important habitats for Blue Whales have therefore been identified by combining information on their distribution with krill aggregation areas (observed or predicted). In the waters of the St. Lawrence estuary, the presence of Blue Whales for foraging, feeding and migration has been observed throughout the year, with increased activity during the summer. It has been observed that feeding rates of Blue Whales are higher in shallow waters and during nocturnal periods (krill at surface), confirming that foraging near the surface is beneficial when possible. Their presence, their great fidelity to this important habitat for their activities and their behavior in the waters of the St. Lawrence in all seasons, show that Blue Whales are vulnerable to oil spills. They are vulnerable, not only indirectly through the reduction of prey and loss of suitable habitat, but also by their behavior requiring active activity on the surface and near the coast. The data used to create the polygons using the bounding box method comes from multiple sources of information: hunting records, photo-identification, coastal, airborne and boat surveys, passive acoustic monitoring, radio and satellite telemetry, ice trapping, anecdotal observations and modeling.
+Dataset description from the Open Data record [@OpenData_blue_imphabitat]:
+```{r bwhab-text, results='asis'}
+# trim extra sections off.  
+blueWhaleText <- sub("The attribute table has been completed with the information contained in the following  research document: .*", "", blueWhaleHab_rr$text$en)
+writeLines(noquote(blueWhaleText))
+
+```
 
 Please see a list of all sources of information used in @Lesage2018 and the Open Data record [@OpenData_blue_imphabitat]: <https://open.canada.ca/data/en/dataset/8fafd919-fcbe-43a3-a911-3d9461273441>.
 
@@ -308,13 +314,15 @@ if (!is.null(clipped$mapData)){
 write_meta(nbw_rr, "EN")
 ```
 
-The Scotian Shelf population of Northern Bottlenose Whales (*Hyperoodon ampullatus*) is listed as Endangered under Canada's Species at Risk Act. Partial critical habitat was identified for this population in the Recovery Strategy first published in 2010 [@DFO2016_recoverynbw], and three critical habitat areas were designated along the eastern Scotian Shelf, encompassing the Gully, Shortland Canyon, and Haldimand Canyon (shapefile available online: <https://open.canada.ca/data/en/dataset/db177a8c-5d7d-49eb-8290-31e6a45d786c>). However, the Recovery Strategy recognized that additional areas may constitute critical habitat for the population and recommended further studies based on acoustic and visual monitoring to assess the importance of inter-canyon areas as foraging habitat and transit corridors for Northern Bottlenose Whales.
+Dataset description from the Open Data record:
+```{r nbw-text, results='asis'}
+# trim extra sections off.  
+nbwText <- sub("References: .*", "", nbw_rr$text$en)
+writeLines(noquote(nbwText))
 
-In a subsequent study of the distribution, movements, and habitat use of Northern Bottlenose Whales on the eastern Scotian Shelf [@Stanistreet2021], several sources of data were assessed and additional important habitat was identified in the inter-canyon areas located between the Gully, Shortland Canyon, and Haldimand Canyon [@DFO2020NBW_imphabitat]. A summary of the data inputs, analyses, and limitations is provided below.
+```
 
-Year-round passive acoustic monitoring conducted with bottom-mounted recorders at two inter-canyon sites from 2012-2014 revealed the presence and foraging activity of Northern Bottlenose Whales in these areas throughout much of the year, with a seasonal peak in acoustic detections during the spring. Detections from acoustic recordings collected during vessel-based surveys provided additional evidence of species occurrence in inter-canyon areas during the summer months. Photo-identification data collected in the Gully, Shortland, and Haldimand canyons between 2001 and 2017 were used to model the residency and movement patterns of Northern Bottlenose Whales within and between the canyons, and demonstrated that individuals regularly moved between the three canyons as well as to and from outside areas. Together, these results indicated a strong degree of connectivity between the Gully, Shortland, and Haldimand canyons, and provided evidence that the inter-canyon areas function as important foraging habitat and movement corridors for Scotian Shelf Northern Bottlenose Whales.
-
-The inter-canyon habitat area polygon was delineated using the 500 m depth contour and straight lines connecting the southeast corners of the existing critical habitat areas, but these boundaries are based on limited spatial information on the presence of Northern Bottlenose Whales in deeper waters. More data are needed to determine whether this area fully encompasses important inter-canyon habitat, particularly in regard to the deeper southeastern boundary. Similarly, the full extent of important habitat for Scotian Shelf Northern Bottlenose Whales remains unknown, and potential critical habitat areas outside the canyons and inter-canyon areas on the eastern Scotian Shelf have not been fully assessed. See [@DFO2020NBW_imphabitat] for further information.
+Please see a list of all sources of information at the Open Data record [@DFO2020NBW_imphabitat]: `r nbw_rr$metadata$url$en`.
 
 #### ***Area-specific Northern Bottlenose Whale Important Habitat in inter-canyon areas on the eastern Scotian Shelf search results***
 
