--- a/app/Rmd/report_fish_EN.Rmd
+++ b/app/Rmd/report_fish_EN.Rmd
@@ -5,7 +5,7 @@ editor_options:
 ---
 
 ```{r fish-setup}
-filesLoaded <- load_rdata(c("rv_rr", "isdb_rr", "marfis_rr", "ocearch_rr", "obisFish_rr"), "MAR", env = environment())
+filesLoaded <- load_rdata(c("rv_rr", "ilts_rr", "isdb_rr", "marfis_rr", "ocearch_rr", "obisFish_rr"), "MAR", env = environment())
 
 ```
 
@@ -83,6 +83,70 @@ if (!is.null(outputList$studyData)) {
 knitr::kable(rvAllTable, align="l", caption="\\label{tab:rv_freq_table}Quality Tier: High. Security level: none. Maritimes Research Vessel (RV) Survey observation records of <u>all species</u> contained within the search area, summarized by species or species group. <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 }
 ```
+
+
+
+
+
+### **Inshore Lobster Trawl Survey (ILTS)**  {#ilts-section}
+
+```{r ilts-meta, results='asis'}
+write_meta(ilts_rr, "EN")
+```
+
+From Denton (2020): “An annual trawl survey is conducted in Southwestern Nova Scotia and the Bay of Fundy to assess the lobster stocks in Lobster Fishing Areas (LFA) 34. The survey is conducted with the Northeast Fisheries Science Center Ecosystem Survey Trawl (NEST), a small mesh trawl with a cod end liner, which ensures the capture of various sizes of lobster. The dimensions and location of the trawl are monitored and recorded throughout the tow using an electronic trawl mensuration system. In addition, water temperature and depth are also recorded. The target tow length is 1 kilometer which is tracked using an Olex marine charting system. Vessel crew, DFO science staff and a contracted at sea observer work together to perform required tasks and collect all relevant data. Catch from each tow is separated by species, weighed and counted. Length frequency data is collected on select groundfish and crab species, detailed morphometric data is collected on each lobster.” 
+
+Citation: 
+Denton, Cheryl M. 2020. Maritimes Region Inshore Lobster Trawl Survey Technical Description. Can. Tech. Rep. Fish. Aquat. Sci. 3376: v + 52 p. 
+
+#### ***Area-specific search results for the Lobster Trawl Survey***
+
+```{r ilts-results, include=FALSE, cache=FALSE}
+iltsClipped <- master_intersect(ilts_rr$data_sf, mapDataList)
+
+tableList <- create_table_ilts(iltsClipped$studyData, listed_species)
+iltsAllTable <- tableList$allSpecies
+iltsSarTable <- tableList$sarData
+summarySarTable <- add_col_to_sar_summary(summarySarTable, "[ILTS](#ilts-section)", iltsSarTable, "Common Name", "Common Name")
+
+```
+
+```{r ilts-check, comment="", prompt=TRUE, echo=FALSE, results='asis'}
+iltsCheck <- if (!is.null(iltsClipped$studyData)) {
+    "* There are relevant records in the Lobster Trawl Survey for this search area."
+  } else {
+    "* There are no relevant records in the Lobster Trawl Survey for this search area. "
+  }
+writeLines(noquote(iltsCheck))
+```
+
+
+```{r ilts-plot, fig.height=8, fig.width=11, fig.cap= 'Quality Tier: High. Security level: Protected B. Map showing the search area defined by the user (red outline) used to query information from the Lobster Trawl Survey. Black lines and arrows indicate the location and direction of each NEST trawl sample. Frequency represents number of trawls in which a given species was sampled, relative to the total number of trawls within the search area.'}
+
+if (!is.null(iltsClipped$studyData)) {
+areaMap +
+    geom_segment(aes(x = iltsClipped$mapPoints$long, 
+                     y = iltsClipped$mapPoints$lat, 
+                     xend = iltsClipped$mapPoints$ELONG, 
+                     yend = iltsClipped$mapPoints$ELAT), 
+                 arrow=arrow(length = unit(0.15,"cm")), size = 0.5)
+}
+```
+<br>
+```{r ilts-SAR-table}
+if (!is.null(iltsClipped$studyData)) {
+  if (nrow(iltsSarTable) > 0) {
+    knitr::kable(iltsSarTable, align="l", caption="\\label{tab:ilts_SAR_table}Quality Tier: High. Security level: Protected B. Inshore Lobster Trawl Survey (ITLS) observation records of species contained within the search area and listed by the Species At Risk Act (SARA), or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. </b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+  }
+}
+```
+<br>
+```{r ilts-all-table}
+if (!is.null(iltsClipped$studyData)) {
+knitr::kable(iltsAllTable, align="l", caption="\\label{tab:ilts_all_table}Quality Tier: High. Security level: none. Inshore Lobster Trawl Survey (ITLS) observation records of all species contained within the search area, summarized by species or species group. The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. </b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+}
+```
+
 
 ### **Industry Survey and Maritimes Fishery Databases**  
 
